--- a/index.html
+++ b/index.html
@@ -254,168 +254,150 @@
             <div class="swiper box">
                 <div class="swiper-wrapper contentBx">
                     <div class="swiper-slide images">
-                        <span class="label">tv</span>
                         <img src="img/img3.png" alt="">
+                        <div class="overlayGradient"></div>
+                        <span class="label">tv</span>
                         <div class="watch">
                             <span></span>
                             <span>one piece</span>
-                            <span><i class="fas fa-star">8.10</i></span>
+                            <span><i class="fas fa-star"></i>8.10</span>
                             <span>tonton sekarang</span>
                         </div>
                     </div>
                     <div class="swiper-slide images">
-                        <span class="label">tv</span>
                         <img src="img/img3.png" alt="">
+                        <div class="overlayGradient"></div>
+                        <span class="label">tv</span>
                         <div class="watch">
                             <span></span>
                             <span>one piece</span>
-                            <span><i class="fas fa-star">8.10</i></span>
+                            <span><i class="fas fa-star"></i>8.10</span>
                             <span>tonton sekarang</span>
                         </div>
                     </div>
                     <div class="swiper-slide images">
-                        <span class="label">tv</span>
                         <img src="img/img3.png" alt="">
+                        <div class="overlayGradient"></div>
+                        <span class="label">tv</span>
                         <div class="watch">
                             <span></span>
                             <span>one piece</span>
-                            <span><i class="fas fa-star">8.10</i></span>
+                            <span><i class="fas fa-star"></i>8.10</span>
                             <span>tonton sekarang</span>
                         </div>
                     </div>
                     <div class="swiper-slide images">
-                        <span class="label">tv</span>
                         <img src="img/img3.png" alt="">
+                        <div class="overlayGradient"></div>
+                        <span class="label">tv</span>
                         <div class="watch">
                             <span></span>
                             <span>one piece</span>
-                            <span><i class="fas fa-star">8.10</i></span>
+                            <span><i class="fas fa-star"></i>8.10</span>
                             <span>tonton sekarang</span>
                         </div>
                     </div>
                     <div class="swiper-slide images">
-                        <span class="label">tv</span>
                         <img src="img/img3.png" alt="">
+                        <div class="overlayGradient"></div>
+                        <span class="label">tv</span>
                         <div class="watch">
                             <span></span>
                             <span>one piece</span>
-                            <span><i class="fas fa-star">8.10</i></span>
+                            <span><i class="fas fa-star"></i>8.10</span>
                             <span>tonton sekarang</span>
                         </div>
                     </div>
-
+                    <div class="swiper-slide images">
+                        <img src="img/img3.png" alt="">
+                        <div class="overlayGradient"></div>
+                        <span class="label">tv</span>
+                        <div class="watch">
+                            <span></span>
+                            <span>one piece</span>
+                            <span><i class="fas fa-star"></i>8.10</span>
+                            <span>tonton sekarang</span>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </section>
 
-    <section class="listAnime" id="listAnime">
-        <h3>episode terbaru</h3>
-
-        <div class="lists">
-            <div class="content">
-                <div class="images">
-                    <img src="img/img4.png" alt="">
+    <section class="listAnime">
+        <div class="contentAnime">
+            <h3>daftar anime</h3>
+            <div class="contentBox">
+                <div class="cards">
+                    <div class="images">
+                        <img src="img/img4.png" alt="">
+                    </div>
+                    <div class="contentText">
+                        <h4>Shingeki No Kyoojinkjkjkjkjkjkjdsfsfsfsffhjhjhjhjhj</h4>
+                        <h5>episode 5</h5>
+                        <h6>posted by : nuryana</h6>
+                        <p>released on 1, 1, 2021</p>
+                    </div>
                 </div>
-                <div class="textContent">
-                    <h3>Futsal Boys</h3>
-                    <h4>episode 5</h4>
-                    <h5>posted by:sans</h5>
-                    <h6>relased on : 8 jam yang lalu</h6>
+                <div class="cards">
+                    <div class="images">
+                        <img src="img/img4.png" alt="">
+                    </div>
+                    <div class="contentText">
+                        <h4>Shingeki No Kyoojin</h4>
+                        <h5>episode 5</h5>
+                        <h6>posted by : nuryana</h6>
+                        <p>released on 1, 1, 2021</p>
+                    </div>
                 </div>
-            </div>
-            <div class="content">
-                <div class="images">
-                    <img src="img/img4.png" alt="">
+                <div class="cards">
+                    <div class="images">
+                        <img src="img/img4.png" alt="">
+                    </div>
+                    <div class="contentText">
+                        <h4>Shingeki No Kyoojin</h4>
+                        <h5>episode 5</h5>
+                        <h6>posted by : nuryana</h6>
+                        <p>released on 1, 1, 2021</p>
+                    </div>
                 </div>
-                <div class="textContent">
-                    <h3>Futsal Boys</h3>
-                    <h4>episode 5</h4>
-                    <h5>posted by:sans</h5>
-                    <h6>relased on : 8 jam yang lalu</h6>
+                <div class="cards">
+                    <div class="images">
+                        <img src="img/img4.png" alt="">
+                    </div>
+                    <div class="contentText">
+                        <h4>Shingeki No Kyoojin</h4>
+                        <h5>episode 5</h5>
+                        <h6>posted by : nuryana</h6>
+                        <p>released on 1, 1, 2021</p>
+                    </div>
                 </div>
-            </div>
-            <div class="content">
-                <div class="images">
-                    <img src="img/img4.png" alt="">
+                <div class="cards">
+                    <div class="images">
+                        <img src="img/img4.png" alt="">
+                    </div>
+                    <div class="contentText">
+                        <h4>Shingeki No Kyoojin</h4>
+                        <h5>episode 5</h5>
+                        <h6>posted by : nuryana</h6>
+                        <p>released on 1, 1, 2021</p>
+                    </div>
                 </div>
-                <div class="textContent">
-                    <h3>Futsal Boys</h3>
-                    <h4>episode 5</h4>
-                    <h5>posted by:sans</h5>
-                    <h6>relased on : 8 jam yang lalu</h6>
-                </div>
-            </div>
-            <div class="content">
-                <div class="images">
-                    <img src="img/img4.png" alt="">
-                </div>
-                <div class="textContent">
-                    <h3>Futsal Boys</h3>
-                    <h4>episode 5</h4>
-                    <h5>posted by:sans</h5>
-                    <h6>relased on : 8 jam yang lalu</h6>
-                </div>
-            </div>
-            <div class="content">
-                <div class="images">
-                    <img src="img/img4.png" alt="">
-                </div>
-                <div class="textContent">
-                    <h3>Futsal Boys</h3>
-                    <h4>episode 5</h4>
-                    <h5>posted by:sans</h5>
-                    <h6>relased on : 8 jam yang lalu</h6>
-                </div>
-            </div>
-            <div class="content">
-                <div class="images">
-                    <img src="img/img4.png" alt="">
-                </div>
-                <div class="textContent">
-                    <h3>Futsal Boys</h3>
-                    <h4>episode 5</h4>
-                    <h5>posted by:sans</h5>
-                    <h6>relased on : 8 jam yang lalu</h6>
-                </div>
-            </div>
-            <div class="content">
-                <div class="images">
-                    <img src="img/img4.png" alt="">
-                </div>
-                <div class="textContent">
-                    <h3>Futsal Boys</h3>
-                    <h4>episode 5</h4>
-                    <h5>posted by:sans</h5>
-                    <h6>relased on : 8 jam yang lalu</h6>
-                </div>
-            </div>
-            <div class="content">
-                <div class="images">
-                    <img src="img/img4.png" alt="">
-                </div>
-                <div class="textContent">
-                    <h3>Futsal Boys</h3>
-                    <h4>episode 5</h4>
-                    <h5>posted by:sans</h5>
-                    <h6>relased on : 8 jam yang lalu</h6>
-                </div>
-            </div>
-            <div class="content">
-                <div class="images">
-                    <img src="img/img4.png" alt="">
-                </div>
-                <div class="textContent">
-                    <h3>Futsal Boys</h3>
-                    <h4>episode 5</h4>
-                    <h5>posted by:sans</h5>
-                    <h6>relased on : 8 jam yang lalu</h6>
+                <div class="cards">
+                    <div class="images">
+                        <img src="img/img4.png" alt="">
+                    </div>
+                    <div class="contentText">
+                        <h4>Shingeki No Kyoojin</h4>
+                        <h5>episode 5</h5>
+                        <h6>posted by : nuryana</h6>
+                        <p>released on 1, 1, 2021</p>
+                    </div>
                 </div>
             </div>
         </div>
-
-        <div class="dichie"></div>
     </section>
+
 
 
     <script src="swiper-bundle.min.js"></script>
