--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
                         <span class="label">tv</span>
                         <div class="watch">
                             <span></span>
-                            <span>one piece</span>
+                            <span>shingeki no kyojin season 2</span>
                             <span><i class="fas fa-star"></i>8.10</span>
                             <span>tonton sekarang</span>
                         </div>
@@ -281,7 +281,7 @@
                         <span class="label">tv</span>
                         <div class="watch">
                             <span></span>
-                            <span>one piece</span>
+                            <span>kimetsu no yaiba</span>
                             <span><i class="fas fa-star"></i>8.10</span>
                             <span>tonton sekarang</span>
                         </div>
@@ -292,7 +292,7 @@
                         <span class="label">tv</span>
                         <div class="watch">
                             <span></span>
-                            <span>one piece</span>
+                            <span>boruto the next generation</span>
                             <span><i class="fas fa-star"></i>8.10</span>
                             <span>tonton sekarang</span>
                         </div>
@@ -303,7 +303,7 @@
                         <span class="label">tv</span>
                         <div class="watch">
                             <span></span>
-                            <span>one piece</span>
+                            <span>overlord</span>
                             <span><i class="fas fa-star"></i>8.10</span>
                             <span>tonton sekarang</span>
                         </div>
@@ -505,6 +505,122 @@
                 </div>
             </div>
     </section>
+
+    <section class="bannerTop">
+        <div class="contentBanner">
+            <h3>anime movie</h3>
+            <div class="cprevnext1">
+                <span><a href=""><i class="fas fa-chevron-left"></i></a></span>
+                <span><a href=""><i class="fas fa-chevron-right"></i></a></span>
+            </div>
+
+            <div class="swiper bannerAnime">
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide boxContent">
+                        <div class="contentImg">
+                            <img src="img/img1.png" alt="">
+                            <div class="overlay ">
+                                <span><i class="fas fa-play"></i></span>
+                            </div>
+                            <div class="rating">
+                                <span class="tv">tv</span>
+                                <span class="tv"><i class="fas fa-star"></i>7.5</span>
+                            </div>
+                        </div>
+                        <div class="contentText">
+                            <h4>one piece</h4>
+                            <p>ongoing</p>
+                        </div>
+                    </div>
+                    <div class="swiper-slide boxContent">
+                        <div class="contentImg">
+                            <img src="img/img1.png" alt="">
+                            <div class="overlay ">
+                                <span><i class="fas fa-play"></i></span>
+                            </div>
+                            <div class="rating">
+                                <span class="tv">tv</span>
+                                <span class="tv"><i class="fas fa-star"></i>7.5</span>
+                            </div>
+                        </div>
+                        <div class="contentText">
+                            <h4>boruto the next generation</h4>
+                            <p>ongoing</p>
+                        </div>
+                    </div>
+                    <div class="swiper-slide boxContent">
+                        <div class="contentImg">
+                            <img src="img/img1.png" alt="">
+                            <div class="overlay ">
+                                <span><i class="fas fa-play"></i></span>
+                            </div>
+                            <div class="rating">
+                                <span class="tv">tv</span>
+                                <span class="tv"><i class="fas fa-star"></i>7.5</span>
+                            </div>
+                        </div>
+                        <div class="contentText">
+                            <h4>kimetsu no yaiba</h4>
+                            <p>ongoing</p>
+                        </div>
+                    </div>
+                    <div class="swiper-slide boxContent">
+                        <div class="contentImg">
+                            <img src="img/img1.png" alt="">
+                            <div class="overlay ">
+                                <span><i class="fas fa-play"></i></span>
+                            </div>
+                            <div class="rating">
+                                <span class="tv">tv</span>
+                                <span class="tv"><i class="fas fa-star"></i>7.5</span>
+                            </div>
+                        </div>
+                        <div class="contentText">
+                            <h4>sono bisque doll wa koi wo suru</h4>
+                            <p>ongoing</p>
+                        </div>
+                    </div>
+                    <div class="swiper-slide boxContent">
+                        <div class="contentImg">
+                            <img src="img/img1.png" alt="">
+                            <div class="overlay ">
+                                <span><i class="fas fa-play"></i></span>
+                            </div>
+                            <div class="rating">
+                                <span class="tv">tv</span>
+                                <span class="tv"><i class="fas fa-star"></i>7.5</span>
+                            </div>
+                        </div>
+                        <div class="contentText">
+                            <h4>shikkakumon no saikyou kenja</h4>
+                            <p>ongoing</p>
+                        </div>
+                    </div>
+                    <div class="swiper-slide boxContent">
+                        <div class="contentImg">
+                            <img src="img/img1.png" alt="">
+                            <div class="overlay ">
+                                <span><i class="fas fa-play"></i></span>
+                            </div>
+                            <div class="rating">
+                                <span class="tv">tv</span>
+                                <span class="tv"><i class="fas fa-star"></i>7.5</span>
+                            </div>
+                        </div>
+                        <div class="contentText">
+                            <h4>arifureta shokuguyo de sekai saiyou season2</h4>
+                            <p>ongoing</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="footer">
+        <p>Build By Nuryana N</p>
+    </section>
+
 
 
 
