--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
                         <img src="img/img4.png" alt="">
                     </div>
                     <div class="contentText">
-                        <h4>Shingeki No Kyoojinkjkjkjkjkjkjdsfsfsfsffhjhjhjhjhj</h4>
+                        <h4><a href="">Shingeki No Kyoojinkjkjkjkjkjkjdsfsfsfsffhjhjhjhjhj</a></h4>
                         <h5>episode 5</h5>
                         <h6>posted by : nuryana</h6>
                         <p>released on 1, 1, 2021</p>
@@ -352,7 +352,7 @@
                         <img src="img/img4.png" alt="">
                     </div>
                     <div class="contentText">
-                        <h4>Shingeki No Kyoojin</h4>
+                        <h4><a href="">Shingeki No Kyoojinkjkjkjkjkjkjdsfsfsfsffhjhjhjhjhj</a></h4>
                         <h5>episode 5</h5>
                         <h6>posted by : nuryana</h6>
                         <p>released on 1, 1, 2021</p>
@@ -363,7 +363,7 @@
                         <img src="img/img4.png" alt="">
                     </div>
                     <div class="contentText">
-                        <h4>Shingeki No Kyoojin</h4>
+                        <h4><a href="">Shingeki No Kyoojinkjkjkjkjkjkjdsfsfsfsffhjhjhjhjhj</a></h4>
                         <h5>episode 5</h5>
                         <h6>posted by : nuryana</h6>
                         <p>released on 1, 1, 2021</p>
@@ -374,7 +374,7 @@
                         <img src="img/img4.png" alt="">
                     </div>
                     <div class="contentText">
-                        <h4>Shingeki No Kyoojin</h4>
+                        <h4><a href="">Shingeki No Kyoojinkjkjkjkjkjkjdsfsfsfsffhjhjhjhjhj</a></h4>
                         <h5>episode 5</h5>
                         <h6>posted by : nuryana</h6>
                         <p>released on 1, 1, 2021</p>
@@ -385,7 +385,7 @@
                         <img src="img/img4.png" alt="">
                     </div>
                     <div class="contentText">
-                        <h4>Shingeki No Kyoojin</h4>
+                        <h4><a href="">Shingeki No Kyoojinkjkjkjkjkjkjdsfsfsfsffhjhjhjhjhj</a></h4>
                         <h5>episode 5</h5>
                         <h6>posted by : nuryana</h6>
                         <p>released on 1, 1, 2021</p>
@@ -396,7 +396,7 @@
                         <img src="img/img4.png" alt="">
                     </div>
                     <div class="contentText">
-                        <h4>Shingeki No Kyoojin</h4>
+                        <h4><a href="">Shingeki No Kyoojinkjkjkjkjkjkjdsfsfsfsffhjhjhjhjhj</a></h4>
                         <h5>episode 5</h5>
                         <h6>posted by : nuryana</h6>
                         <p>released on 1, 1, 2021</p>
@@ -407,7 +407,7 @@
                         <img src="img/img4.png" alt="">
                     </div>
                     <div class="contentText">
-                        <h4>Shingeki No Kyoojin</h4>
+                        <h4><a href="">Shingeki No Kyoojinkjkjkjkjkjkjdsfsfsfsffhjhjhjhjhj</a></h4>
                         <h5>episode 5</h5>
                         <h6>posted by : nuryana</h6>
                         <p>released on 1, 1, 2021</p>
@@ -418,7 +418,7 @@
                         <img src="img/img4.png" alt="">
                     </div>
                     <div class="contentText">
-                        <h4>Shingeki No Kyoojin</h4>
+                        <h4><a href="">Shingeki No Kyoojinkjkjkjkjkjkjdsfsfsfsffhjhjhjhjhj</a></h4>
                         <h5>episode 5</h5>
                         <h6>posted by : nuryana</h6>
                         <p>released on 1, 1, 2021</p>
@@ -429,7 +429,7 @@
                         <img src="img/img4.png" alt="">
                     </div>
                     <div class="contentText">
-                        <h4>Shingeki No Kyoojin</h4>
+                        <h4><a href="">Shingeki No Kyoojinkjkjkjkjkjkjdsfsfsfsffhjhjhjhjhj</a></h4>
                         <h5>episode 5</h5>
                         <h6>posted by : nuryana</h6>
                         <p>released on 1, 1, 2021</p>
@@ -440,7 +440,7 @@
                         <img src="img/img4.png" alt="">
                     </div>
                     <div class="contentText">
-                        <h4>Shingeki No Kyoojin</h4>
+                        <h4><a href="">Shingeki No Kyoojinkjkjkjkjkjkjdsfsfsfsffhjhjhjhjhj</a></h4>
                         <h5>episode 5</h5>
                         <h6>posted by : nuryana</h6>
                         <p>released on 1, 1, 2021</p>
@@ -450,14 +450,14 @@
             <div class="paging">
                 <ul>
                     <li>page 1 of 147</li>
-                    <li>1</li>
-                    <li>2</li>
-                    <li>3</li>
-                    <li>4</li>
-                    <li>5</li>
-                    <li>6</li>
-                    <li>7</li>
-                    <li>8</li>
+                    <li><a href="">1</a></li>
+                    <li><a href="">2</a></li>
+                    <li><a href="">3</a></li>
+                    <li><a href="">4</a></li>
+                    <li><a href="">5</a></li>
+                    <li><a href="">6</a></li>
+                    <li><a href="">7</a></li>
+                    <li><a href="">8</a></li>
                 </ul>
             </div>
         </div>
@@ -472,7 +472,7 @@
                         <img src="img/img4.png" alt="">
                     </div>
                     <div class="contentText">
-                        <h4>Shingeki No Kyoojinkjkjkjkjkjkjdsfsfsfsffhjhjhjhjhj</h4>
+                        <h4><a href="">Shingeki No Kyoojinkjkjkjkjkjkjdsfsfsfsffhjhjhjhjhj</a></h4>
                         <h5>episode 5</h5>
                         <h6>posted by : nuryana</h6>
                         <p>released on 1, 1, 2021</p>
@@ -483,7 +483,7 @@
                         <img src="img/img4.png" alt="">
                     </div>
                     <div class="contentText">
-                        <h4>Shingeki No Kyoojin</h4>
+                        <h4><a href="">Shingeki No Kyoojinkjkjkjkjkjkjdsfsfsfsffhjhjhjhjhj</a></h4>
                         <h5>episode 5</h5>
                         <h6>posted by : nuryana</h6>
                         <p>released on 1, 1, 2021</p>
@@ -494,7 +494,7 @@
                         <img src="img/img4.png" alt="">
                     </div>
                     <div class="contentText">
-                        <h4>Shingeki No Kyoojin</h4>
+                        <h4><a href="">Shingeki No Kyoojinkjkjkjkjkjkjdsfsfsfsffhjhjhjhjhj</a></h4>
                         <h5>episode 5</h5>
                         <h6>posted by : nuryana</h6>
                         <p>released on 1, 1, 2021</p>
@@ -505,7 +505,7 @@
                         <img src="img/img4.png" alt="">
                     </div>
                     <div class="contentText">
-                        <h4>Shingeki No Kyoojin</h4>
+                        <h4><a href="">Shingeki No Kyoojinkjkjkjkjkjkjdsfsfsfsffhjhjhjhjhj</a></h4>
                         <h5>episode 5</h5>
                         <h6>posted by : nuryana</h6>
                         <p>released on 1, 1, 2021</p>
