--- a/anime.html
+++ b/anime.html
@@ -178,7 +178,60 @@
 
     <section class="infosAnime" id="infosAnime">
         <div class="animeInfo">
-            <h3>Info Anime</h3>
+            <div class="content">
+                <div class="tableInfo">
+                    <div class="table1">
+                        <table>
+                            <h3>Info Anime</h3>
+                            <tr>
+                                <th>japanese</th>
+                                <td>フットサルボーイズ!!!!!</td>
+                            </tr>
+                            <tr>
+                                <th>type</th>
+                                <td>tv</td>
+                            </tr>
+                            <tr>
+                                <th>duration</th>
+                                <td>24 min</td>
+                            </tr>
+                            <tr>
+                                <th>season</th>
+                                <td>winter 2022</td>
+                            </tr>
+                            <tr>
+                                <th>producers</th>
+                                <td>not found</td>
+                            </tr>
+                        </table>
+                    </div>
+                    <div class="table2">
+                        <table>
+                            <tr>
+                                <th>status</th>
+                                <td>ongoing</td>
+                            </tr>
+                            <tr>
+                                <th>source</th>
+                                <td>mixed meida</td>
+                            </tr>
+                            <tr>
+                                <th>total episode</th>
+                                <td>unknown</td>
+                            </tr>
+                            <tr>
+                                <th>studio</th>
+                                <td>diomedia</td>
+                            </tr>
+                            <tr>
+                                <th>rilis</th>
+                                <td>Jan 9, 2022 to ?</td>
+                            </tr>
+                        </table>
+                    </div>
+                </div>
+            </div>
+        </div>
         </div>
     </section>
 
